--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Permitir rolagem */
 }
 
 #playbutton {
@@ -18,7 +21,6 @@ body {
 .gameloc {
     width: 100%;
     max-width: 800px;
-    aspect-ratio: 4 / 3;
     margin: 0 auto;
 }
 
