--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    background-image: url("images_src/football_img.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #playbutton {
