--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ body, html {
 
 .gameloc {
     width: 100%;
-    max-width: 800px;
-    aspect-ratio: 4 / 3;
+    max-width: 1200px; /* Ajustado para desktops maiores */
+    aspect-ratio: 16 / 9; /* Ajuste conforme necessário */
     margin: 0 auto;
 }
 
@@ -47,26 +47,11 @@ body, html {
     }
 }
 
-@media (orientation: landscape) {
+@media (min-width: 1024px) {
     .gameloc {
         width: 100%;
-        height: auto;
-        max-width: 100%;
-    }
-}
-
-/* Modo retrato */
-@media only screen and (orientation: portrait) {
-    #ruffle {
-        height: 100vh;
-        width: 100%;
-    }
-}
-
-/* Modo paisagem */
-@media only screen and (orientation: landscape) {
-    #ruffle {
-        height: 100vh;
-        width: 100%;
+        max-width: 1200px;
+        aspect-ratio: 16 / 9;
+        margin: 0 auto;
     }
 }
