--- a/style.css
+++ b/style.css
@@ -8,12 +8,11 @@ body, html {
     justify-content: center;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    overflow: auto; /* Adicionar rolagem caso necessário */
 }
 
 #ruffle {
     width: 100%;
-    height: 85vh; /* 85% da altura da visualização padrão */
+    max-height: 85vh; /* 85% da altura da visualização */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,7 +59,7 @@ body, html {
 /* Modo retrato */
 @media only screen and (orientation: portrait) {
     #ruffle {
-        height: 85vh; /* Ajuste para 85% da altura da visualização */
+        max-height: 85vh; /* Ajuste para 85% da altura da visualização */
         width: 100%;
         overflow: auto; /* Adicionar rolagem caso necessário */
     }
@@ -69,7 +68,7 @@ body, html {
 /* Modo paisagem */
 @media only screen and (orientation: landscape) {
     #ruffle {
-        height: 85vh; /* Ajuste para 85% da altura da visualização */
+        max-height: 85vh; /* Ajuste para 85% da altura da visualização */
         width: 100%;
         overflow: auto; /* Adicionar rolagem caso necessário */
     }
@@ -78,7 +77,7 @@ body, html {
 /* Ajuste para desktop */
 @media (min-width: 1024px) {
     #ruffle {
-        height: 85vh; /* 85% da altura da visualização para desktops */
+        max-height: 85vh; /* 85% da altura da visualização para desktops */
         overflow: auto; /* Adicionar rolagem caso necessário */
     }
 }
