--- a/style.css
+++ b/style.css
@@ -1,22 +1,8 @@
-
-body, html {
+body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-}
-
-#ruffle {
-    width: 100%;
-    height: 85vh; /* 85% da altura da visualização */
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 #playbutton {
@@ -53,21 +39,5 @@ body, html {
         width: 100%;
         height: auto;
         max-width: 100%;
-    }
-}
-
-/* Modo retrato */
-@media only screen and (orientation: portrait) {
-    #ruffle {
-        height: 85vh; /* Ajuste para 85% da altura da visualização */
-        width: 100%;
-    }
-}
-
-/* Modo paisagem */
-@media only screen and (orientation: landscape) {
-    #ruffle {
-        height: 85vh; /* Ajuste para 85% da altura da visualização */
-        width: 100%;
     }
 }
