--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+}
+
+#ruffle {
+    width: 800px; /* Largura fixa */
+    height: 600px; /* Altura fixa */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto; /* Permitir rolagem se necessário */
 }
 
 #playbutton {
@@ -39,5 +53,32 @@ body {
         width: 100%;
         height: auto;
         max-width: 100%;
+    }
+}
+
+/* Modo retrato */
+@media only screen and (orientation: portrait) {
+    #ruffle {
+        width: 800px; /* Largura fixa */
+        height: 600px; /* Altura fixa */
+        overflow: auto; /* Permitir rolagem se necessário */
+    }
+}
+
+/* Modo paisagem */
+@media only screen and (orientation: landscape) {
+    #ruffle {
+        width: 800px; /* Largura fixa */
+        height: 600px; /* Altura fixa */
+        overflow: auto; /* Permitir rolagem se necessário */
+    }
+}
+
+/* Ajuste para desktop */
+@media (min-width: 1024px) {
+    #ruffle {
+        width: 800px; /* Largura fixa */
+        height: 600px; /* Altura fixa */
+        overflow: auto; /* Permitir rolagem se necessário */
     }
 }
